MODIFIED fixed video ssection mobile.

--- a/css/media.css
+++ b/css/media.css
@@ -617,6 +617,7 @@
   }
   .video-section .modal-body {
     padding: 15px;
+    margin-top: 50%;
   }
   .tools-info-title {
     font-size: 24px;
